fix: change background color to black for improved contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,13 +5,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Asimovian&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Asimovian&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: #fffcd7;
+  --background: #000000;
   --foreground: #000000;
 }
 body {
@@ -131,7 +131,7 @@ p {
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #000000;
-    --foreground: #ededed;
+    --foreground: #000000;
   }
 }
 /* Loading Screen Animations */
